# rocket-chip

./: .gitignore  .gitmodules  Makefrag  build.sbt  flow.toml  technology.toml
emulator/: Makefrag-verilator
project/: plugins.sbt
sha3/: README.md  build.sbt
sha3/doc/: sha3.drawio
sha3/src/main/c/: CMakeLists.txt  fips202.c  fips202.h  perf.h  poly.h  sha3_inst.h  symmetric-fips202.c  test.c
sha3/src/main/c/spike_sim/: CMakeLists.txt  sha3_model.cc  sha3_model.h  sha3_rocc.cc
sha3/src/main/resources/: clock.xdc.mustache  vivado.tcl.mustache
sha3/src/main/scala/sha3/: Generator.scala  KeccakState.scala  Sha3Accelerator.scala  Sha3SystemConfig.scala  Transforms.scala  package.scala  test.sc
sha3/src/test/java/sha3/: KeccakDigest.java
sha3/src/test/scala/sha3/: KeccakSpec.scala  test.scala
sha3/src/test/scala/xisel/viva/: SynthSpec.scala
src/main/resources/csrc/: emulator.cc
src/main/resources/flow/: dc.tcl.mustache
src/main/scala/: Config.scala
src/main/scala/devices/debug/: Custom.scala  Debug.scala  Periphery.scala
src/main/scala/diplomacy/: AddressRange.scala  BundleBridge.scala  LazyModule.scala  Parameters.scala  Resources.scala
src/main/scala/diplomaticobjectmodel/: ConstructOM.scala
src/main/scala/groundtest/: Generator.scala
src/main/scala/jtag/: JtagShifter.scala  JtagTap.scala  Utils.scala
src/main/scala/rocket/: CSR.scala  DCache.scala  Frontend.scala  HellaCache.scala  ICache.scala  PTW.scala  RocketCore.scala  package.scala
src/main/scala/subsystem/: BaseSubsystem.scala
src/main/scala/system/: Configs.scala  ExampleRocketSystem.scala  Generator.scala
src/main/scala/tile/: FPU.scala  LazyRoCC.scala
src/main/scala/tilelink/: Arbiter.scala  Parameters.scala  RegisterRouter.scala  ToAXI4.scala
src/main/scala/unittest/: Generator.scala  UnitTest.scala
src/main/scala/util/: Annotations.scala  AsyncResetReg.scala  ClockDivider.scala  GeneratorUtils.scala  Misc.scala  Replacement.scala
